# warehouse_project

./: README.md
attach_shelf/: CMakeLists.txt  frames.gv  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/rviz/: attach_shelf_vis.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
attach_shelf_msg/: CMakeLists.txt  package.xml
cartographer_slam/: CMakeLists.txt  package.xml
cartographer_slam/config/: warehouse_map_real.pgm  warehouse_map_real.yaml
cartographer_slam/launch/: cartographer.launch.py
localization_server/: CMakeLists.txt  package.xml
localization_server/config/: amcl_config.yaml  localization_config.rviz
localization_server/launch/: localization.launch.py
map_server/: CMakeLists.txt  package.xml
map_server/config/: keep_out_warehouse.pgm  keep_out_warehouse_map_real.pgm  mapper_rviz_config.rviz  warehouse_map_keepout_real.yaml  warehouse_map_keepout_sim.yaml  warehouse_map_sim.pgm  warehouse_map_sim.yaml
map_server/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
map_server/config/log/: latest_build
map_server/launch/: map_server.launch.py
nav2_apps/: package.xml
nav2_apps/scripts/: move_shelf_to_ship.py
path_planner_server/: CMakeLists.txt  package.xml
path_planner_server/config/: controller.yaml  filters.yaml  pathplanning.rviz  planner_server.yaml  recovery.yaml
path_planner_server/launch/: pathplanner.launch.py
